[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docbridge"
version = "0.0.2"
authors = [{ name = "Mark Smith", email = "mark.smith@mongodb.com" }]
description = "A thin abstraction layer over BSON documents, to keep your data model agile."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pymongo[srv]==4.6.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/mongodb-developer/docbridge"
Issues = "https://github.com/mongodb-developer/docbridge/issues"
